--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -30,3 +30,15 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+    text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, p {
+    margin: 0;
+}
+
+p {
+    color: #838894;
+}
