--- a/frontend/styles/gigover.css
+++ b/frontend/styles/gigover.css
@@ -26,6 +26,7 @@ html {
 
 body {
     background: #fff;
+    font-size: 1rem;
 }
 
 html, body, #__next {
@@ -49,6 +50,42 @@ h2 {
 
 h2, h3, h4, h5 {
     font-weight: 700;
+}
+
+@media screen and (max-width: 924px) {
+    body {
+        font-size: 0.95rem;
+    }
+
+    h1 {
+        font-size: 42px;
+    }
+
+    h2 {
+        font-size: 36px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 0.9rem;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 14px;
+    }
 }
 
 .light {
